Code cleaning part 2